lpv/DartParser.py
# Generated from e:\University\6 term\automate_python\Dart.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DartParser ( Parser ):

    grammarFileName = "Dart.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'||'", "'&&'", "'=='", "'!='", "'>'", "'<'", 
                     "'>='", "'<='", "'!'", "':'", "';'", "','", "'.'", 
                     "'let'", "'input'", "'output'", "'if'", "'else'", "'while'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "'='", "'int'", 
                     "'real'" ]

    symbolicNames = [ "<INVALID>", "Main", "AddOp", "SubOp", "MulOp", "DivOp", 
                      "ModOp", "BoolOr", "BoolAnd", "BoolEq", "BoolNeq", 
                      "BoolG", "BoolL", "BoolGeq", "BoolLeq", "BoolNot", 
                      "Colon", "Semicolon", "Comma", "Point", "Let", "Input", 
                      "Output", "If", "Else", "While", "LBrace", "RBrace", 
                      "LSBrace", "RSBrace", "LFBrace", "RFBrace", "Assign", 
                      "Integer", "Real", "IntValue", "RealValue", "Id", 
                      "Comment", "Ws" ]

    RULE_start = 0
    RULE_declare = 1
    RULE_typeName = 2
    RULE_statementSeq = 3
    RULE_statement = 4
    RULE_simpleStatement = 5
    RULE_complexStatement = 6
    RULE_let = 7
    RULE_keyboardIn = 8
    RULE_out = 9
    RULE_ifC = 10
    RULE_whileC = 11
    RULE_exp = 12
    RULE_simpleExpr = 13
    RULE_term = 14
    RULE_signedFactor = 15
    RULE_factor = 16

    ruleNames =  [ "start", "declare", "typeName", "statementSeq", "statement", 
                   "simpleStatement", "complexStatement", "let", "keyboardIn", 
                   "out", "ifC", "whileC", "exp", "simpleExpr", "term", 
                   "signedFactor", "factor" ]

    EOF = Token.EOF
    Main=1
    AddOp=2
    SubOp=3
    MulOp=4
    DivOp=5
    ModOp=6
    BoolOr=7
    BoolAnd=8
    BoolEq=9
    BoolNeq=10
    BoolG=11
    BoolL=12
    BoolGeq=13
    BoolLeq=14
    BoolNot=15
    Colon=16
    Semicolon=17
    Comma=18
    Point=19
    Let=20
    Input=21
    Output=22
    If=23
    Else=24
    While=25
    LBrace=26
    RBrace=27
    LSBrace=28
    RSBrace=29
    LFBrace=30
    RFBrace=31
    Assign=32
    Integer=33
    Real=34
    IntValue=35
    RealValue=36
    Id=37
    Comment=38
    Ws=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Main(self):
            return self.getToken(DartParser.Main, 0)

        def LBrace(self):
            return self.getToken(DartParser.LBrace, 0)

        def RBrace(self):
            return self.getToken(DartParser.RBrace, 0)

        def LFBrace(self):
            return self.getToken(DartParser.LFBrace, 0)

        def statementSeq(self):
            return self.getTypedRuleContext(DartParser.StatementSeqContext,0)


        def RFBrace(self):
            return self.getToken(DartParser.RFBrace, 0)

        def getRuleIndex(self):
            return DartParser.RULE_start

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = DartParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(DartParser.Main)
            self.state = 35
            self.match(DartParser.LBrace)
            self.state = 36
            self.match(DartParser.RBrace)
            self.state = 37
            self.match(DartParser.LFBrace)
            self.state = 38
            self.statementSeq()
            self.state = 39
            self.match(DartParser.RFBrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(DartParser.TypeNameContext,0)


        def Id(self):
            return self.getToken(DartParser.Id, 0)

        def Assign(self):
            return self.getToken(DartParser.Assign, 0)

        def exp(self):
            return self.getTypedRuleContext(DartParser.ExpContext,0)


        def getRuleIndex(self):
            return DartParser.RULE_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare" ):
                return visitor.visitDeclare(self)
            else:
                return visitor.visitChildren(self)




    def declare(self):

        localctx = DartParser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.typeName()
            self.state = 42
            self.match(DartParser.Id)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DartParser.Assign:
                self.state = 43
                self.match(DartParser.Assign)
                self.state = 44
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Real(self):
            return self.getToken(DartParser.Real, 0)

        def Integer(self):
            return self.getToken(DartParser.Integer, 0)

        def getRuleIndex(self):
            return DartParser.RULE_typeName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeName" ):
                return visitor.visitTypeName(self)
            else:
                return visitor.visitChildren(self)




    def typeName(self):

        localctx = DartParser.TypeNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_typeName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            _la = self._input.LA(1)
            if not(_la==DartParser.Integer or _la==DartParser.Real):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementSeqContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DartParser.StatementContext)
            else:
                return self.getTypedRuleContext(DartParser.StatementContext,i)


        def getRuleIndex(self):
            return DartParser.RULE_statementSeq

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementSeq" ):
                return visitor.visitStatementSeq(self)
            else:
                return visitor.visitChildren(self)




    def statementSeq(self):

        localctx = DartParser.StatementSeqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statementSeq)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DartParser.Input) | (1 << DartParser.Output) | (1 << DartParser.If) | (1 << DartParser.While) | (1 << DartParser.Integer) | (1 << DartParser.Real) | (1 << DartParser.Id))) != 0):
                self.state = 49
                self.statement()
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleStatement(self):
            return self.getTypedRuleContext(DartParser.SimpleStatementContext,0)


        def complexStatement(self):
            return self.getTypedRuleContext(DartParser.ComplexStatementContext,0)


        def getRuleIndex(self):
            return DartParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DartParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DartParser.Input, DartParser.Output, DartParser.Integer, DartParser.Real, DartParser.Id]:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.simpleStatement()
                pass
            elif token in [DartParser.If, DartParser.While]:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.complexStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Semicolon(self):
            return self.getToken(DartParser.Semicolon, 0)

        def declare(self):
            return self.getTypedRuleContext(DartParser.DeclareContext,0)


        def let(self):
            return self.getTypedRuleContext(DartParser.LetContext,0)


        def keyboardIn(self):
            return self.getTypedRuleContext(DartParser.KeyboardInContext,0)


        def out(self):
            return self.getTypedRuleContext(DartParser.OutContext,0)


        def getRuleIndex(self):
            return DartParser.RULE_simpleStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleStatement" ):
                return visitor.visitSimpleStatement(self)
            else:
                return visitor.visitChildren(self)




    def simpleStatement(self):

        localctx = DartParser.SimpleStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_simpleStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DartParser.Integer, DartParser.Real]:
                self.state = 59
                self.declare()
                pass
            elif token in [DartParser.Id]:
                self.state = 60
                self.let()
                pass
            elif token in [DartParser.Input]:
                self.state = 61
                self.keyboardIn()
                pass
            elif token in [DartParser.Output]:
                self.state = 62
                self.out()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 65
            self.match(DartParser.Semicolon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComplexStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifC(self):
            return self.getTypedRuleContext(DartParser.IfCContext,0)


        def whileC(self):
            return self.getTypedRuleContext(DartParser.WhileCContext,0)


        def getRuleIndex(self):
            return DartParser.RULE_complexStatement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComplexStatement" ):
                return visitor.visitComplexStatement(self)
            else:
                return visitor.visitChildren(self)




    def complexStatement(self):

        localctx = DartParser.ComplexStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_complexStatement)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DartParser.If]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.ifC()
                pass
            elif token in [DartParser.While]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.whileC()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(DartParser.Id, 0)

        def Assign(self):
            return self.getToken(DartParser.Assign, 0)

        def exp(self):
            return self.getTypedRuleContext(DartParser.ExpContext,0)


        def getRuleIndex(self):
            return DartParser.RULE_let

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLet" ):
                return visitor.visitLet(self)
            else:
                return visitor.visitChildren(self)




    def let(self):

        localctx = DartParser.LetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_let)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(DartParser.Id)
            self.state = 72
            self.match(DartParser.Assign)
            self.state = 73
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyboardInContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Input(self):
            return self.getToken(DartParser.Input, 0)

        def LBrace(self):
            return self.getToken(DartParser.LBrace, 0)

        def Id(self):
            return self.getToken(DartParser.Id, 0)

        def RBrace(self):
            return self.getToken(DartParser.RBrace, 0)

        def getRuleIndex(self):
            return DartParser.RULE_keyboardIn

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyboardIn" ):
                return visitor.visitKeyboardIn(self)
            else:
                return visitor.visitChildren(self)




    def keyboardIn(self):

        localctx = DartParser.KeyboardInContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_keyboardIn)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(DartParser.Input)
            self.state = 76
            self.match(DartParser.LBrace)
            self.state = 77
            self.match(DartParser.Id)
            self.state = 78
            self.match(DartParser.RBrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OutContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Output(self):
            return self.getToken(DartParser.Output, 0)

        def LBrace(self):
            return self.getToken(DartParser.LBrace, 0)

        def Id(self):
            return self.getToken(DartParser.Id, 0)

        def RBrace(self):
            return self.getToken(DartParser.RBrace, 0)

        def getRuleIndex(self):
            return DartParser.RULE_out

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOut" ):
                return visitor.visitOut(self)
            else:
                return visitor.visitChildren(self)




    def out(self):

        localctx = DartParser.OutContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_out)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(DartParser.Output)
            self.state = 81
            self.match(DartParser.LBrace)
            self.state = 82
            self.match(DartParser.Id)
            self.state = 83
            self.match(DartParser.RBrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfCContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def If(self):
            return self.getToken(DartParser.If, 0)

        def LBrace(self):
            return self.getToken(DartParser.LBrace, 0)

        def exp(self):
            return self.getTypedRuleContext(DartParser.ExpContext,0)


        def RBrace(self):
            return self.getToken(DartParser.RBrace, 0)

        def LFBrace(self, i:int=None):
            if i is None:
                return self.getTokens(DartParser.LFBrace)
            else:
                return self.getToken(DartParser.LFBrace, i)

        def statementSeq(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DartParser.StatementSeqContext)
            else:
                return self.getTypedRuleContext(DartParser.StatementSeqContext,i)


        def RFBrace(self, i:int=None):
            if i is None:
                return self.getTokens(DartParser.RFBrace)
            else:
                return self.getToken(DartParser.RFBrace, i)

        def Else(self):
            return self.getToken(DartParser.Else, 0)

        def getRuleIndex(self):
            return DartParser.RULE_ifC

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfC" ):
                return visitor.visitIfC(self)
            else:
                return visitor.visitChildren(self)




    def ifC(self):

        localctx = DartParser.IfCContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifC)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(DartParser.If)
            self.state = 86
            self.match(DartParser.LBrace)
            self.state = 87
            self.exp()
            self.state = 88
            self.match(DartParser.RBrace)
            self.state = 89
            self.match(DartParser.LFBrace)
            self.state = 90
            self.statementSeq()
            self.state = 91
            self.match(DartParser.RFBrace)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DartParser.Else:
                self.state = 92
                self.match(DartParser.Else)
                self.state = 93
                self.match(DartParser.LFBrace)
                self.state = 94
                self.statementSeq()
                self.state = 95
                self.match(DartParser.RFBrace)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileCContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def While(self):
            return self.getToken(DartParser.While, 0)

        def LBrace(self):
            return self.getToken(DartParser.LBrace, 0)

        def exp(self):
            return self.getTypedRuleContext(DartParser.ExpContext,0)


        def RBrace(self):
            return self.getToken(DartParser.RBrace, 0)

        def LFBrace(self):
            return self.getToken(DartParser.LFBrace, 0)

        def statementSeq(self):
            return self.getTypedRuleContext(DartParser.StatementSeqContext,0)


        def RFBrace(self):
            return self.getToken(DartParser.RFBrace, 0)

        def getRuleIndex(self):
            return DartParser.RULE_whileC

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileC" ):
                return visitor.visitWhileC(self)
            else:
                return visitor.visitChildren(self)




    def whileC(self):

        localctx = DartParser.WhileCContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_whileC)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(DartParser.While)
            self.state = 100
            self.match(DartParser.LBrace)
            self.state = 101
            self.exp()
            self.state = 102
            self.match(DartParser.RBrace)
            self.state = 103
            self.match(DartParser.LFBrace)
            self.state = 104
            self.statementSeq()
            self.state = 105
            self.match(DartParser.RFBrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleExpr(self):
            return self.getTypedRuleContext(DartParser.SimpleExprContext,0)


        def exp(self):
            return self.getTypedRuleContext(DartParser.ExpContext,0)


        def BoolEq(self):
            return self.getToken(DartParser.BoolEq, 0)

        def BoolNeq(self):
            return self.getToken(DartParser.BoolNeq, 0)

        def BoolG(self):
            return self.getToken(DartParser.BoolG, 0)

        def BoolL(self):
            return self.getToken(DartParser.BoolL, 0)

        def BoolLeq(self):
            return self.getToken(DartParser.BoolLeq, 0)

        def BoolGeq(self):
            return self.getToken(DartParser.BoolGeq, 0)

        def getRuleIndex(self):
            return DartParser.RULE_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp" ):
                return visitor.visitExp(self)
            else:
                return visitor.visitChildren(self)




    def exp(self):

        localctx = DartParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.simpleExpr()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DartParser.BoolEq) | (1 << DartParser.BoolNeq) | (1 << DartParser.BoolG) | (1 << DartParser.BoolL) | (1 << DartParser.BoolGeq) | (1 << DartParser.BoolLeq))) != 0):
                self.state = 108
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DartParser.BoolEq) | (1 << DartParser.BoolNeq) | (1 << DartParser.BoolG) | (1 << DartParser.BoolL) | (1 << DartParser.BoolGeq) | (1 << DartParser.BoolLeq))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 109
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(DartParser.TermContext,0)


        def simpleExpr(self):
            return self.getTypedRuleContext(DartParser.SimpleExprContext,0)


        def AddOp(self):
            return self.getToken(DartParser.AddOp, 0)

        def SubOp(self):
            return self.getToken(DartParser.SubOp, 0)

        def BoolOr(self):
            return self.getToken(DartParser.BoolOr, 0)

        def getRuleIndex(self):
            return DartParser.RULE_simpleExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleExpr" ):
                return visitor.visitSimpleExpr(self)
            else:
                return visitor.visitChildren(self)




    def simpleExpr(self):

        localctx = DartParser.SimpleExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_simpleExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.term()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DartParser.AddOp) | (1 << DartParser.SubOp) | (1 << DartParser.BoolOr))) != 0):
                self.state = 113
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DartParser.AddOp) | (1 << DartParser.SubOp) | (1 << DartParser.BoolOr))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 114
                self.simpleExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def signedFactor(self):
            return self.getTypedRuleContext(DartParser.SignedFactorContext,0)


        def term(self):
            return self.getTypedRuleContext(DartParser.TermContext,0)


        def MulOp(self):
            return self.getToken(DartParser.MulOp, 0)

        def DivOp(self):
            return self.getToken(DartParser.DivOp, 0)

        def BoolAnd(self):
            return self.getToken(DartParser.BoolAnd, 0)

        def getRuleIndex(self):
            return DartParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = DartParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.signedFactor()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DartParser.MulOp) | (1 << DartParser.DivOp) | (1 << DartParser.BoolAnd))) != 0):
                self.state = 118
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DartParser.MulOp) | (1 << DartParser.DivOp) | (1 << DartParser.BoolAnd))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 119
                self.term()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignedFactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(DartParser.FactorContext,0)


        def AddOp(self):
            return self.getToken(DartParser.AddOp, 0)

        def SubOp(self):
            return self.getToken(DartParser.SubOp, 0)

        def getRuleIndex(self):
            return DartParser.RULE_signedFactor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSignedFactor" ):
                return visitor.visitSignedFactor(self)
            else:
                return visitor.visitChildren(self)




    def signedFactor(self):

        localctx = DartParser.SignedFactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_signedFactor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DartParser.AddOp or _la==DartParser.SubOp:
                self.state = 122
                _la = self._input.LA(1)
                if not(_la==DartParser.AddOp or _la==DartParser.SubOp):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 125
            self.factor()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Id(self):
            return self.getToken(DartParser.Id, 0)

        def IntValue(self):
            return self.getToken(DartParser.IntValue, 0)

        def RealValue(self):
            return self.getToken(DartParser.RealValue, 0)

        def LBrace(self):
            return self.getToken(DartParser.LBrace, 0)

        def exp(self):
            return self.getTypedRuleContext(DartParser.ExpContext,0)


        def RBrace(self):
            return self.getToken(DartParser.RBrace, 0)

        def getRuleIndex(self):
            return DartParser.RULE_factor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = DartParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DartParser.Id]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.match(DartParser.Id)
                pass
            elif token in [DartParser.IntValue, DartParser.RealValue]:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                _la = self._input.LA(1)
                if not(_la==DartParser.IntValue or _la==DartParser.RealValue):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [DartParser.LBrace]:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.match(DartParser.LBrace)
                self.state = 130
                self.exp()
                self.state = 131
                self.match(DartParser.RBrace)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





